# ampass

./: .gitignore  package-lock.json  package.json  turbo.json
.github/workflows/: build-and-audit.yml  deploy-pages.yml  release-extension.yml
.kiro/steering/: desktop-app-planning.md
ampass/: .htaccess  README.md  index.php  sw.js
ampass/app/: version.php
ampass/database/: schema.sql
ampass/docs/: .htaccess  ADMIN-QA.md  APP-ACCOUNTS-QA.md  QA.md  REMOTE-BACKUPS.md  SECURITY-REVIEW.md  SECURITY.md  TRUSTED-DEVICES-QA.md  UPDATER.md  extension-api.md  version.json
ampass/install/: index.php
ampass/public/: sync-db-version.php
clients/: browser-extension.crx  browser-extension.pem
clients/browser-extension/: README.md  manifest.json  package.json  vite.config.js
clients/desktop-tauri/: .gitignore  README.md  SPEC.md  package-lock.json  package.json
clients/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop-tauri/src-tauri/capabilities/: default.json
clients/desktop-tauri/src-tauri/src/: backup.rs  keychain.rs  lib.rs  lock.rs  main.rs  native_messaging.rs  storage.rs  tray.rs
clients/native-messaging/: chrome-host-manifest.json  com.ampass.desktop-firefox.json  edge-host-manifest.json  (+4 more)
dist-pages/: CNAME  index.html
public/: manifest.webmanifest
release/: BUILD-DESKTOP-WINDOWS.md  INSTALL-CPANEL.md  INSTALL-XAMPP.md
scripts/: build-desktop-windows.ps1  build-extension.sh  cron-update.php  generate-icons.ps1  generate_extension_icons.py  prepare-gh-pages.js  sync-version.php
src/: index.css  routeTree.gen.ts
(+102 files in other folders)
